[tool.poetry]
name = "bookreview"
version = "0.1.0"
description = ""
authors = ["beanxx <tnqls991211@naver.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
pymongo = "^3.11.4"
requests = "^2.25.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
